# fastapi

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  prestart.sh  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt
app/: initial_data.py  main.py
app/api/: deps.py
app/api/api_v1/endpoints/: items.py  login.py  users.py
app/api/tencent/: sms.py
app/core/: config.py
app/crud/: base.py  crud_item.py  crud_user.py
app/db/: init_db.py  session.py
app/models/: item.py  user.py
app/schemas/: item.py  token.py  user.py
app/testing/: item.py  user.py  utilities.py
app/utilities/: __init__.py  logging.py
scripts/mongo-entrypoint/: mongo-init.sh
tests/: conftest.py
tests/api_v1/: test_items.py  test_login.py  test_users.py
